--- a/usenix/paper.tex
+++ b/usenix/paper.tex
@@ -29,6 +29,7 @@
 \usepackage{breakurl}
 \usepackage{xspace}
 \usepackage{multirow}
+\usepackage{enumitem}
 \RequirePackage{booktabs}
 \RequirePackage{color}
 \RequirePackage{colortbl}
@@ -39,6 +40,7 @@
 \RequirePackage{listings}
 \RequirePackage{tikz}
 \usetikzlibrary{arrows}
+\setlist[itemize]{noitemsep}
 \begin{document}
 
 \clubpenalty=10000  % Don't allow orphans
