--- a/usenix/discussion.tex
+++ b/usenix/discussion.tex
@@ -1,10 +1,9 @@
 \section{Discussion}
 \label{sec:discussion}
-
 In this section, we discuss the various technical, political, and legal limitations
 of \system{}, as well as possible avenues for future work. 
 
-\paragraph{\system{} limitations.} CDNs become slightly limited in terms of the 
+\textbf{\system{} limitations.} CDNs become slightly limited in terms of the 
 possible performance optimizations when following \system{}'s design.  For example, 
 many CDNs perform HTTPS re-writes on content that they cache, but this can only be 
 done if the CDN has access to the decrypted content.  Similarly, the CDN needs the 
@@ -13,7 +12,7 @@ this likely increases performance in traditional CDNs, it does not provide the g
 increase in performance; content caching around the world is the greatest benefit to 
 performance, which \system{} preserves.
 
-\paragraph{CDNs operated by content hosts.} The design of \system{}
+\textbf{CDNs operated by content hosts.} The design of \system{}
 assumes that the entities operating the proxies and delivering content are
 distinct from original content provider. In many cases, however---particularly
 for large content providers such as Netflix, Facebook, and Google---the
@@ -43,7 +42,7 @@ the content, as well as which clients are requesting which content.
 %it more difficult for a CDN to identify the group of requests coming from a single
 %client, since a client's requests would mixed among multiple proxies. 
 
-\paragraph{Legal questions and political pushback.} Recent cases surrounding
+\textbf{Legal questions and political pushback.} Recent cases surrounding
 the Stored Communications Act in the United States raise some questions over
 whether a system like \system{} might face legal challenges from law
 enforcement agencies. To protect user data against these types of challenges,
