--- a/usenix/performance.tex
+++ b/usenix/performance.tex
@@ -38,24 +38,19 @@ described in Section \ref{sec:implementation}.  Figure \ref{fig:impl} shows
 how our measurements reflect \system{} (solid line) and a traditional CDN (dotted 
 line).  
 
-Figure \ref{fig:ttfb} shows the time to first byte (TTFB) for both \system{} and 
+Figure \ref{fig:completion} shows the time to first byte (TTFB) and the time for both \system{} and 
 without \system{}.  We can see the the TTFB using \system{} grows linearly with 
 file size, whereas without \system{} TTFB remains fairly constant.  Interestingly, 
 we can see that there are some fixed time operations that \system{} performs, which 
-is visible by looking at the smaller file sizes.
+is visible by looking at the smaller file sizes. Completion time grows linearly with file size, but for both \system{} and without \system{}; while both follow the 
+same pattern, the time to complete requests is, as expected, longer using \system{} as it performs many cryptographic operations and proxies traffic between the client and the CDN.
 
 %\begin{figure}[t!]
 %\centering
 %\includegraphics[width=.4\textwidth]{TTFB}
 %\caption{Time to first byte measurements with and without \system{}.}
 %\label{fig:ttfb}
-%\end{figure}
-
-In addition to measuring TTFB, we measured the time it took to complete a request (with and 
-without \system{}); the results are shown in Figure \ref{fig:completion}.  Again, completion time 
-grows linearly with file size, but for both \system{} and without \system{}; while both follow the 
-same pattern, the time to complete requests is, as expected, longer using \system{} as it performs 
-many cryptographic operations and proxies traffic between the client and the CDN.  
+%\end{figure}  
 
 %\begin{figure}[t!]
 %\centering
