--- a/usenix/protocol.tex
+++ b/usenix/protocol.tex
@@ -113,7 +113,7 @@ added padding, to reconstruct the original content.
 
 \begin{figure}[t!]
 \centering
-\includegraphics[width=.4\textwidth]{request_diagram_simple}
+\includegraphics[height=5cm,keepaspectratio]{request_diagram_simple}
 \caption{Steps for retrieving content in \system{} when a client is prioritizing 
 performance and goes directly to an exit proxy.}
 \label{fig:retrieving}
@@ -121,7 +121,7 @@ performance and goes directly to an exit proxy.}
 
 \begin{figure}[t!]
 \centering
-\includegraphics[width=.5\textwidth]{request_diagram_complex}
+\includegraphics[width=.4\textwidth]{request_diagram_complex}
 \caption{Steps for retrieving content in \system{} when a client is prioritizing 
 privacy and proxies a request through two other clients before reaching the 
 exit proxy.  This figure shows that the request is sent sequentially through peers, 
