shrinking fig 9 caption

--- a/usenix/performance.tex
+++ b/usenix/performance.tex
@@ -11,8 +11,7 @@
     \centering
     \includegraphics[trim={7 0 10 5},clip,width=\textwidth]{Latency_withoutzero_2}
     %\vspace{-10mm}
-    \caption{Time to first byte and time to complete a request with varying the file size and latency; this latency 
-corresponds to $\alpha$ in Figure \ref{fig:impl}.}
+    \caption{Time to first byte and time to complete a request with varying the file size and latency.}%; this latency corresponds to $\alpha$ in Figure \ref{fig:impl}.}
     \label{fig:latency}
   \end{minipage}
   \hfill
